Add mission card component

--- a/front-end/src/app/components/missions/missions.component.html
+++ b/front-end/src/app/components/missions/missions.component.html
@@ -1,27 +1,1 @@
-<table>
-  <thead>
-    <tr>
-      <td>Missions</td>
-      <td>Description</td>
-      <td>Status</td>
-      <td></td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td class="mission__title">Thaicom</td>
-      <td>
-        Thaicom is the name of a series of communications satellites operated
-        from Thailand, and also the name of Thaicom Public Company Limited,
-        which is the company that owns and operates the Thaicom satellite fleet
-        and other telecommunication businesses in Thailand and throughout the
-        Asia-Pacific region. The satellite projects were named Thaicom by the
-        King of Thailand, His Majesty the King Bhumibol Adulyadej, as a symbol
-        of the linkage between Thailand and modern communications technology.
-      </td>
-      <td class="mission__member"><span class="not__member">Not A member</span></td>
-      <!-- Change this button to a component -->
-      <td><button>Join Mission </button></td>
-    </tr>
-  </tbody>
-</table>
+<app-mission-card [missions]="missions"></app-mission-card>
