Add join mission btn

--- a/front-end/src/app/components/mission-card/mission-card.component.html
+++ b/front-end/src/app/components/mission-card/mission-card.component.html
@@ -15,7 +15,7 @@
       </td>
       <td class="mission__member"><span [ngClass]="{'not__member' : (!mission.member),'active__member':(mission.member)}">{{mission.member ? 'Active Member' : 'Not A member'}}</span></td>
       <!-- Change this button to a component -->
-      <td><button>Join Mission </button></td>
+      <td><app-join-mission-btn [member]="mission.member" [id]="mission.id" (joinEmit)="toggleMember($event)"></app-join-mission-btn></td>
     </tr>
   </tbody>
 </table>
