Add profile styling

--- a/front-end/src/app/components/profile/profile.component.html
+++ b/front-end/src/app/components/profile/profile.component.html
@@ -1,1 +1,15 @@
-<p>profile works!</p>
+<div class="profile">
+  <section class="profile__missions">
+    <h2 class="profile__title">My Missions</h2>
+    <ul>
+      <li>No Missions Joined</li>
+    </ul>
+  </section>
+  <section class="profile__rockets">
+    <h2 class="profile__title">My Rockets</h2>
+    <ul>
+      <li>No Rockets reserved</li>
+    </ul>
+  </section>
+
+</div>
