--- a/front-end/src/app/components/profile/profile.component.css
+++ b/front-end/src/app/components/profile/profile.component.css
@@ -19,6 +19,9 @@ ul {
 
 li {
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 li:not(:last-child) {
